tests/Checker/everything/errors/11c.vc
void f(int a) {
}

int main() {
    f(f);
    return 1;
}
